# .gnuradio

./: .gitignore  LICENSE  README.md  config.conf  grc.conf  top_block.py
gr-dip/: CMakeLists.txt  MANIFEST.md
gr-dip/cmake/Modules/: dipConfig.cmake
gr-dip/docs/: README.dip
gr-dip/docs/doxygen/: Doxyfile.in
gr-dip/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-dip/grc/: .#dip_image_source.xml  CMakeLists.txt  dip_gaussian.xml  dip_gradient.xml  dip_gradient_magnitude.xml  dip_gradient_phase.xml  dip_im2vec.xml  dip_image_save.xml  dip_image_sink.xml  dip_image_source.xml  dip_image_throttle.xml  dip_median.xml  dip_rgb2gray.xml  dip_threshold.xml  dip_vec2im.xml  filters_median.xml
gr-dip/include/dip/: CMakeLists.txt  api.h  gaussian.h  gradient.h  gradient_magnitude.h  gradient_phase.h  im2vec.h  image_save.h  image_sink.h  image_source.h  image_throttle.h  median.h  rgb2gray.h  threshold.h  vec2im.h
gr-dip/lib/: .#im2vec_impl.cc  CMakeLists.txt  gaussian_impl.cc  gaussian_impl.h  gradient_impl.cc  gradient_impl.h  gradient_magnitude_impl.cc  gradient_magnitude_impl.h  gradient_phase_impl.cc  gradient_phase_impl.h  im2vec_impl.cc  im2vec_impl.h  image_save_impl.cc  image_save_impl.h  image_sink_impl.cc  image_sink_impl.h  image_source_impl.cc  image_source_impl.h  image_throttle_impl.cc  image_throttle_impl.h  median_impl.cc  median_impl.h  qa_dip.cc  qa_dip.h  rgb2gray_impl.cc  rgb2gray_impl.h  test_dip.cc  threshold_impl.cc  threshold_impl.h  vec2im_impl.cc  vec2im_impl.h
gr-dip/python/: CMakeLists.txt  __init__.py  qa_gaussian.py  qa_gradient.py  qa_gradient_magnitude.py  qa_gradient_phase.py  qa_im2vec.py  qa_image_save.py  qa_image_sink.py  qa_image_source.py  qa_image_throttle.py  qa_median.py  qa_rgb2gray.py  qa_threshold.py  qa_vec2im.py
gr-dip/swig/: CMakeLists.txt  dip_swig.i
gr-filters/: CMakeLists.txt  MANIFEST.md
gr-filters/cmake/Modules/: filtersConfig.cmake
gr-filters/docs/: README.filters
gr-filters/docs/doxygen/: Doxyfile.in
gr-filters/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-filters/grc/: CMakeLists.txt  filters_gaussian.xml
gr-filters/include/filters/: CMakeLists.txt  api.h  gaussian.h
gr-filters/lib/: CMakeLists.txt  gaussian_impl.cc  gaussian_impl.h  qa_filters.cc  qa_filters.h  test_filters.cc
gr-filters/python/: CMakeLists.txt  __init__.py  __init__.pyo  qa_gaussian.py
gr-filters/swig/: CMakeLists.txt  filters_swig.i
gr-imcompression/: CMakeLists.txt  MANIFEST.md
gr-imcompression/cmake/Modules/: imcompressionConfig.cmake
gr-imcompression/docs/: README.imcompression
gr-imcompression/docs/doxygen/: Doxyfile.in
gr-imcompression/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-imcompression/grc/: CMakeLists.txt  imcompression_inv_lzw.xml  imcompression_lzw.xml
gr-imcompression/include/imcompression/: CMakeLists.txt  api.h  inv_lzw.h  lzw.h
gr-imcompression/lib/: CMakeLists.txt  inv_lzw_impl.cc  inv_lzw_impl.h  lzw_impl.cc  lzw_impl.h  qa_imcompression.cc  qa_imcompression.h  test_imcompression.cc
gr-imcompression/python/: CMakeLists.txt  __init__.py  __init__.pyo  qa_inv_lzw.py  qa_lzw.py
gr-imcompression/swig/: CMakeLists.txt  imcompression_swig.i
